[package]
name = "bevy_jam_4"
version = "0.1.0"
edition = "2021"

[profile.dev]
opt-level = 1

[profile.dev.package."*"]
opt-level = 3

[dependencies]
bevy = { version = "0.12", default-features = false }
rand = { version = "*" }

[features]
# dev = [
#    "bevy/dynamic_linking"
# ]

default = [
    "bevy/animation",
    "bevy/bevy_asset",
    "bevy/bevy_audio",
    "bevy/bevy_core_pipeline", 
    "bevy/bevy_gizmos", 
    "bevy/bevy_render", 
    "bevy/bevy_sprite",
    "bevy/bevy_text",
    "bevy/bevy_ui", 
    "bevy/multi-threaded", 
    "bevy/bevy_winit", 
    "bevy/default_font", 
    "bevy/png", 
    "bevy/x11", 
]
